# cursor-homework

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  conventions.md  docker-compose.yml  pyproject.toml
doc/: product-idea.md  tasklist.md  vision.md  workflow.md
src/: __init__.py  bot.py  handlers.py  llm.py
tests/: __init__.py  test_handlers.py  test_llm.py
